Completed up to and incl 3.5.4

--- a/ch03/ch03.md
+++ b/ch03/ch03.md
@@ -351,5 +351,190 @@ it->empty()   // 跟第一个语句意思相同（结合了解引用和成员访
 
 - **difference_type**：保证足够大以存储任何两个迭代器对象间的距离，可正可负。
 
+# 3.5 数组
+
+ - 类似vector，也是存放类型相同的对象的容器，但数组的大小确定不变，不能随意增加元素。
+   - 由于大小固定，运行时性能较好
+   - 不允许拷贝和赋值到另一个数组
+
+## 3.5.1 定义和初始化内置数组
+
+ - 维度（数组大小）一定要是const
+```cpp
+int arr[10];                  // 包含10个整数的数组
+
+constexpr unsigned sz = 42;
+int *parr[sz];                // 包含42个整数指针的数组
+
+unsigned cnt = 42;            // 不是常量表达式
+string bad[cnt];              // 错误：cnt（维度）不是常量
+
+string strs[get_size()];      // 当get_size（）的返回是constexpr时正确，否则错误
+```
+
+ - 和内置类型的变量一样，如果在函数内部定义了某种内置类型的数组，那么默认初始化会令数组含有未定义的值 
+ - 定义数组的时候，不允许用auto，也不可以含有引用
+
+**显示初始化数组元素**
+
+```cpp
+const unsigned sz = 3;
+int ia1[sz] = {0,1,2};          // 含有3个元素的数组
+int a2[] = {0,1,2};             // 同样
+int a3[5] = {0,1,2};            // 等价于{0,1,2,0,0}
+string a4[3] = {"hi", "bye"};   // 等价于{"hi", "bye", ""}
+int a5[2] = {0,1,2};            // 错误：维度小于初始值数量
+```
+
+**字符数组的特性**
+
+ - 可以使用字符串面值初始化字符数组；但注意字符串的结尾含有一个空字符，也会被拷贝到数组
+```cpp
+char a1[] = "C++"; // 等价于{'C', '+', '+', '\0'}
+const char a2[6] = "Daniel";  // 错误：没用空间存放空字符
+```
+
+**不允许拷贝和赋值**
+
+ - 不能将数组的内容拷贝到另一个数组作作为初始值或赋值
+```cpp
+int a[] = {1,2,3};
+int a2[] = a;   // 错误：不允许用一个数组初始化另一个数组
+a2 = a;         // 错误：不允许用一个数组赋值另一个数组
+```
+ - 一些编译器支持数组的赋值，这就是所谓的编译器扩展（compiler extension)；但一般来说，还是尽量避免使用非标准特征
+
+**数组指针和引用**
+```cpp
+int *ptrs[10];            // 含有整数指针的数组
+int &refs[10] = /* ? */;  // 错误：数组不可含有引用
+int (*Parray)[10] = &arr; // 一个指向整数的指针数组
+int (&arrRef)[10] = arr;  // 一个数组的引用数组
+int *(&arry)[10] = ptrs;  // 一个指向整数指针的引用数组
+```
+ - 怎么读？建议从名字开始内到外阅读；读*Parray先，然后读[10]，再读int。
+
+## 3.5.2 访问数组元素
+
+ - 在使用数组下标时，通常将其定义为size_t 类型。size_t是一种无符号类型。
+   - 在cstdef头文件中（cstdef是C标准库stddef.h的C++版本）
+
+## 3.5.3 数组和指针
+
+ - 很多时候，使用数组类型的对象其实是使用一个指向该数组首元素的指针
+```cpp
+int ia[] = {1,2,3,4,5};
+auto ia2(ia);       // ia2是一个整形指针，指向ia的第一个元素 
+auto ia3(&ia[0]);   // ia3跟ia2意思一样
+```
+
+**指针也是迭代器**
+
+ - 我们可以使用数组的指针遍历数组
+```cpp
+int arr[] = {0,1,2,3,4};
+int *p = arr; // p指向arr的第一个元素
+++p;          // p递增后，指向arr的第二个元素
+```
+
+ - 尾元素之后的那个并不存在的地址可以用`int *e = &arr[5]`获取；注意：最后一个元素是arr[4]
+ - 遍历例子：
+```cpp
+for(int *b = arr; b != e; ++b)
+  cout << *b << endl;
+```
+
+**标准库函数begin和end**
+
+ - 直接使用以上的方法容易出错，建议使用begin()和end()获取第一个和最后一个之后的地址
+```cpp
+int ia[] = {0,1,2,3,4,5};
+int *beg = begin(ia);
+int *end = end(ia);
+
+while(beg != end && *beg > 3) // 寻找第一个大于3的元素
+  ++beg
+cout << *beg << endl;
+```
+ - 注意：指向最后一个之后的指针不能执行解引用和递增操作
+
+**指针运算**
+
+ - 指针加(或减)整数使得指针前进（或后退）该整数值的位置
+```cpp
+int a[] = {0,1,2,3,4,5};
+int *ip = a + 4;    // 指向第五个元素
+int *ip2 = ip - 2;  // 指向第三个元素
+```
+
+ - 两个指针相减的结果是他们之间的距离
+   - 距离结果是ptrdiff_t类型，定义在cstddef
+   - 因为距离可以是负值，ptrdiff_t是一种带符号类型
+```cpp
+auto n = ip - ip2; // n是2
+```
+
+ - 如果两个指针指向同一个数组，可以利用有关系运算符：
+   - 如果两个指针指向不同数组，则不能比较他们
+```cpp
+int *b = arr, *e = arr+4;
+while(b < e)
+  ++b
+```
+
+**解引用和指针运算的交互**
+
+```cpp
+int ia[] = {...}
+int b = *(ia + 4);    // 指向ia数组的第五个元素
+int c = *ia + 4;      // 等价于：ia[0] + 4；与b不同
+```
+
+## 3.5.4 C风格字符串
+ - 注意：尽管C++支持C风格字符串，但在C++程序中最好不要使用他们因为他们不好使用而且极易引发程序漏洞；是很多安全问题的根本原因
+ - C风格字符串就是**一个以空字符（'\0'）结尾的字符数组**
+
+**C标准库String函数**
+| 函数 | 介绍 |
+|-----|-----|
+| `strlen(p)` | 返回`p`的长度，空字符不计算在内 |
+| `strcmp(p1, p2)` | 比较`p1`和`p2`的相等性。如果`p1==p2`，返回0；如果`p1>p2`，返回一个正值；如果`p1<p2`，返回一个负值。 |
+| `strcat(p1, p2)` | 将`p2`附加到`p1`之后，返回`p1` |
+| `strcpy(p1, p2)` | 将`p2`拷贝给`p1`，返回`p1` |
+
+```cpp
+char ca[] = {'C', '+', '+', '\0'};
+cout << strlen(ca) << endl;
+```
+
+
+ - 很多C++程序在标准库出现之前就已经写好了，因此不一定使用了标准库的string和vector，而使用了C风格的字符串。
+
+**比较字符串**
+
+```cpp
+const char[] a = "A string example";
+const char[] b = "A different string";
+if(a < b) // 为定义的结果（解释在下方）
+...
+```
+ - 以上并不是比较字符串。由于a和b实际上是指向a和b的指针，上面的例子其实在比较a和b的第一个元素的指针，但由于两个指针不是指向同一个数组，所以将得到无定义的结果
+
+ - 正确的比较a小于b方法：`strcmp(a,b) < 0`
+
+**把string连接**
+
+ - 使用string时，我们可以透过`a+b`把两个string连起来
+ - 但如果使用C字符串，就要使用`strcpy`和`strcat`
+```cpp
+strcpy(largeStr, ca1);
+strcat(largeStr, " ");
+strcat(largeStr, ca2);
+```
+ - 很明显看到，如果largeStr大小不正确就会导致错误
+ 
+## 3.5.5 与旧代码的接口
+
+
 
 
