--- a/ch03/ch03.md
+++ b/ch03/ch03.md
@@ -507,9 +507,6 @@ char ca[] = {'C', '+', '+', '\0'};
 cout << strlen(ca) << endl;
 ```
 
-
- - 很多C++程序在标准库出现之前就已经写好了，因此不一定使用了标准库的string和vector，而使用了C风格的字符串。
-
 **比较字符串**
 
 ```cpp
@@ -534,6 +531,31 @@ strcat(largeStr, ca2);
  - 很明显看到，如果largeStr大小不正确就会导致错误
  
 ## 3.5.5 与旧代码的接口
+ - 很多C++程序在标准库出现之前就已经写好了，因此不一定使用了标准库的string和vector，而使用了C风格的字符串。
+
+**混用string对象和C风格字符串**
+
+```cpp
+string s("Hello World");
+char *str = s;                // 错误：不允许用string初始化C风格字符串
+const char *str = s.c_str();  // 可使用string.c_str()初始化C风格字符串
+```
+ - 但我们无法保证c_str()返回的数组一直有效，事实上，如果后续的操作改变了s的值就可能让之前返回的数组失去效用
+   - 最好将该数组重新拷贝一份
+
+**使用数组初始化vector对象**
+
+ - 虽然不可以用一个数组或vector初始化另一个数组，但我们可以用数组初始化一个vector
+```cpp
+int int_arr[] = {0,1,2,3,4,5};
+vector<int> ivec(begin(int_arr), end(int_arr));         // 使用数组的begin和end初始化vector即可
+vector<int> ivec(begin(int_arr)+1, begin(int_arr)+4);   // 也可以使用数组的一部分初始化
+```
+
+**建议**
+ - 允许的情况下，建议不使用指针和数组因为容易出错，尽量使用vector和迭代器。
+
+
 
 
 
