--- a/ch03/ch03.md
+++ b/ch03/ch03.md
@@ -555,8 +555,92 @@ vector<int> ivec(begin(int_arr)+1, begin(int_arr)+4);   // 也可以使用数组
 **建议**
  - 允许的情况下，建议不使用指针和数组因为容易出错，尽量使用vector和迭代器。
 
+# 3.6 多维数组
 
+```cpp
+int ia[3][4]; // 大小为3的数组，而每个元素都是一个包含4个整数的数组
+int arr[10][20][30] = {0}; // 将所有元素初始化为0
+```
+ - 通常，第一个维度称为行，第二个维度称为列
 
+**多维数组初始化**
 
+```cpp
+int ia[3][4] = {
+  {0,1,2},    // 第一行的初始值
+  {3,4,5},
+  {6,7,8}
+};
 
+int ib[3][4] = {0,1,2,3,4,5,6,7,8}; // 这样的初始化也可以
 
+int ic[3][4] = {{0}, {4}, {8}}; // 未列出的元素将执行默认值初始化
+int id[3][4] = {0,1,2,3,4} // 同上；只初始化第一行，未列出的将执行默认值初始化
+```
+
+**使用for语句处理多维数组**
+
+```cpp
+// 方法1（使用下标）
+int rowCnt = a.length, colCnt = a[0].length;
+for(size_t i = 0; i != rowCnt; ++i)
+  for(size_t j =0; j != colCnt; ++j)
+    a[i][j] = 10;
+
+// 方法2（使用引用）
+for(auto &row : ia)
+  for(auto &col : row)
+    col = 10;
+
+// 方法3（外层使用引用，内层不实用引用；但col就没有写功能）
+for(auto &row : ia)
+  for(auto col: row)
+    cout << col;
+
+// 错误：由于row不是引用类型，编译器初始化row时会自动将这些数组形式的元素转换成指向该数组内首元素的指针，从而导致内层for语句不合法。
+for(auto row : ia)
+  for(auto col : row) // 由于row被转换成指针，所以这个语句不合法
+    cout << col;
+```
+
+**指针和多维数组**
+
+```cpp
+int *ip[4];   // 含有整数指针的数组
+int (*p)[4];  // 指向一个整数数组的指针
+```
+ - `(*p)`明确指明这是一个指针，再观察其左右就可以总结是一个整数数组的指针
+ - `int *ip[4]`中的类型是int*，因此ip是一个含有整数指针的数组
+
+```cpp
+int ia[3][4];
+int (*p)[4] = ia;   // ia返回ia首元素的指针
+p = &ia[2];         // p现在指向ia最后元素
+```
+
+```cpp
+int ia[3][4] = ...;
+for(auto p = ia; p != ia + 3; ++p)    // p是指向ia元素的指针；因此第二个检查是ia+3
+  for(auto q = *p; q != *p + 4; ++q)  // 由于p指向每个内层数组的首元素，使用*p将返回内层数组的首元素的指针，所以q是一个整数指针
+    cout << *q;
+
+// 使用begin()和end()，但意义上同上
+for(auto p = begin(ia); p != end(ia); ++p)
+  for(auto q = begin(*p); q != end(*p); ++q)
+    cout << *q;
+```
+
+**类型别名简化多维数组的指针**
+
+```cpp
+// 使用别名的声明（一下两个意义上相等），都是将int_array的类为int[4](含有四个整数的数组)
+using int_array = int[4]; 
+typedef int int_array[4];
+
+for(int_array *p = ia; p != ia + 3; ++p)  // p是指向int_array(含有四个整数的数组)的指针
+  for(int *q = *p; q != *p + 4; ++q)      // *p都是内层数组，也就是指向第一个元素的指针，q是指向内层数组的指针
+    cout << *q << endl;
+```
+
+# keywords:
+ - 缓冲区溢（yi4）出：buffer overflow
