Complete up to and incl 4.7; skipping 4.8

--- a/ch04/ch04.md
+++ b/ch04/ch04.md
@@ -105,5 +105,78 @@ while((i = get_value) != 42){
 ```
  - 由于赋值运算优先级比较低，通常会加上用括号
 
+## 4.5 递增和递减运算符
 
+ - 递增和递减有两种：前置版本（++x)和后置版本(x++)
+   - 前置：将变量+1，然后把改变后的对象作为返回结果
+   - 后置：先返回求值结果，然后猜+变量+1
+
+```cpp
+int i1 = 0, j1, i2 = 0, j2;
+j1 = i1++;  // i1 = 1, j1 = 0
+j2 = ++i2;  // i2 = 1, j2 = 1
+```
+
+**混用解引用和递增**
+```cpp
+auto pbeg = v.begin();
+while(pbeg != v.end())
+  cout << *(pbeg++) << endl;  // 如果改成*(++pbeg)会导致错误
+```
+
+```cpp
+while(beg != s.end())
+  *beg = toupper(*(beg++)); // 错误：无法判断编译器的赋值顺序
+```
+ - 语句左右端都用了beg，并且右侧还改变了beg。问题在于：我们无法判断编译器的赋值顺序；有两种可能性：
+   - 如执行左侧先，没问题：`*beg = toupper(*(beg+1));`
+   - 但如执行右侧先，`beg+1`最后是个null，不可以使用解引用：`*(beg+1) = toupper(*(beg+1));`
+
+## 4.6 成员访问运算符
+
+ - 表达ptr->mem等价于(*ptr).mem();
+
+```cpp
+string s1 = "a string", *p = &s1;
+auto n = s1.size();   // 正确
+n = (*p).size();      // 正确  
+n = *p.size();        // 错误：执行了p.size()先，但指针没有size()函数
+```
+
+## 4.7 条件运算符
+
+ - `cond ? exp1 : exp2`
+
+**嵌套条件运算法**
+ - 从内到外执行：
+```cpp
+finalGrade = (grade > 90) ? "high pass" : (grade < 60 ) ? "fail" : "pass";
+```
+ - 会执行`(grade<60)...`先
+
+**在输出表达式中使用条件运算符**
+
+```cpp
+cout << ((grade < 60) ? "fail" : "pass"); // 正确
+cout << (grade < 60) ? "fail" : "pass";   // 错误：解释如下
+cout << grade < 60 ? "fail": "pass";      // 错误：解释如下
+```
+
+```cpp
+cout << (grade < 60) ? "fail" : "pass";
+//等价于
+cout << (grade < 60);     // 输出后，返回cout给下一行使用
+cout ? "fail" : "pass"; 
+```
+
+```cpp
+cout << grade < 60 ? "fail": "pass";
+//等价于
+cout << grade;              // 输出grade后，返回cout给下一行使用
+cout < 60 ? "fail": "pass"; // cout < 60明显是错误
+```
+
+## 4.8 位运算符
+
+（skip）
 
