Completed and incl 4.10

--- a/ch04/ch04.md
+++ b/ch04/ch04.md
@@ -180,3 +180,30 @@ cout < 60 ? "fail": "pass"; // cout < 60明显是错误
 
 （skip）
 
+## 4.9 sizeof运算符
+
+ - sizeof返回一个size_t类型的常量
+```cpp
+Sales_data data, *p;
+sizeof(Sales_data);   // Sales_data类型的对象所占的空间
+sizeof data;          
+sizeof p;             // 指针的大小
+sizeof *p;            // p所指类型的大小，即Sales_data
+sizeof data.revenue;  // Sales_data的revenue成员对应类型的大小
+sizeof Sales_data::revenue; // 同上
+```
+ - 即使sizeof的运算对象是一个无效指针也不会导致错误，因为指针实际上并没有真正被用。
+ - 对数组使用sizeof运算得到整个数组所占用的大小
+ - 对string和vector执行sizeof运算只返回该类型**固定部分**的大小，**不会计算对象中的元素占用了多少空间
+ - 计算数组中的元素个数：
+```cpp
+constexpr size_t sz = sizeof(arr)/sizeof(*arr); // *arr指向arr的首元素
+int arr2[sz]; // 因为sizeof返回的是常量，我们可以用sz声明数组的维度
+```
+
+## 4.10 逗号运算符
+
+ - 逗号表达式的优先级是最低的
+
+
+
