--- a/ch04/ch04.md
+++ b/ch04/ch04.md
@@ -300,7 +300,7 @@ double slope = i/j; // 如想执行这一行，必须强制类型转换i或j
    - 一般来说，如果我们把一个较大的类型赋值给较小的类型，编译器会出警告信息；但当我们执行显示的类型转换后，警告信息就会被关闭了
   
 **dynamic_cast** 
- - 19.2会做详细解释
+ - 支持运行时类型识别（具体怎么用没说，19.2会做详细解释）
 
 **static_cast**
  - 不可以用在const类型
