Completed and incl 6.2

--- a/ch06/ch06.md
+++ b/ch06/ch06.md
@@ -227,3 +227,64 @@ void print(int matrix[][10]){...}
 void print(int (*matrix)[10]){...}
 ```
 
+### 6.2.5 main: 处理命令行选项
+
+```cpp
+int main(int argc, char *argv[]){...}
+```
+ - argc = 数组中字符串的数量
+ - argv = 参数
+  - 比如： `prog -d -o ofile data0` ==> `argv = ["prog", "-d", "-o", "ofile", "data0", "0"];`
+  - 注意：最后一个指针之后的元素保证值为0
+
+
+## 6.2.6 含有可变形参的函数
+
+ - 当要处理不同数量的实参的函数：
+   - 如果所有的实参类型相同，可以传递一个名为**initializer_list**的标准库类型
+   - 如果实参类型不同，可以编写一种特殊的函数（即可**变参数模版**，16.4节再解释）或**省略符形参数**。
+
+**initializer_list 形参**
+
+ - 使用方式与vector很类似，但initializer_list的元素永远是常量值（因此，无法改变）
+
+| 操作 | 解释 |
+|-----|-----|
+| `initializer_list<T> lst;` | 默认初始化；`T`类型元素的空列表 |
+| `initializer_list<T> lst{a,b,c...};` | `lst`的元素数量和初始值一样多；`lst`的元素是对应初始值的副本；列表中的元素是`const`。 |
+| `lst2(lst)` | 拷贝或赋值一个`initializer_list`对象不会拷贝列表中的元素；拷贝后，原始列表和副本共享元素。 |
+| `lst2 = lst` | 同上 |
+| `lst.size()` | 列表中的元素数量 |
+| `lst.begin()` | 返回指向`lst`中首元素的指针 |
+| `lst.end()` | 返回指向`lst`中微元素下一位置的指针 |
+
+```cpp
+void error_msg(initializer_list<string> i1){
+  for(auto beg = i1.begin; beg != i1.end(); ++beg)
+    cout << *beg << " ";
+  cout << endl;
+}
+```
+
+ - 如传递一个值的序列，必须把序列放在一对花括号
+```cpp
+if(expected != actual)
+  error_msg({"functionX", expected, actual});
+else
+  error_msg({"functionX", expected);
+```
+
+**省略符形参**
+
+ - 省略符形参是为了**便于C++程序访问某些特殊的C代码而设置的**，这些代码使用了名为**varargs**的C标准库功能。
+ - 注意：大多数类类型的对象在传递给省略符形参时都无法正确拷贝
+
+```cpp
+void foo(param_list, ...);
+void foo(...);
+```
+
+
+
+
+
